# SimPL-interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
simPLSnippets/: factorial_snippet  fast_pow_snippet  loop_print  snippet  vector_snippet
src/: CMakeLists.txt
src/ast/: Block.hpp  CMakeLists.txt  Function.cpp  Function.hpp  Program.cpp  Program.hpp  Variable.cpp  Variable.hpp
src/ast/expression/: AndExpression.cpp  AndExpression.hpp  CMakeLists.txt  Expression.hpp  LogicExpression.cpp  LogicExpression.hpp  LogicFactorExpression.cpp  LogicFactorExpression.hpp  MathExpression.cpp  MathExpression.hpp  MathFactorExpression.cpp  MathFactorExpression.hpp  MathTermExpression.cpp  MathTermExpression.hpp  RelationalExpression.cpp  RelationalExpression.hpp
src/ast/statement/: Block.cpp  Block.hpp  CMakeLists.txt  FunctionCallStatement.cpp  FunctionCallStatement.hpp  IfStatement.cpp  IfStatement.hpp  PrintStatement.cpp  PrintStatement.hpp  Return.hpp  ReturnStatement.cpp  ReturnStatement.hpp  Statement.hpp  VariableAssignment.cpp  VariableAssignment.hpp  WhileStatement.cpp  WhileStatement.hpp
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h
src/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/token/: CMakeLists.txt  Token.cpp  Token.h  TokenType.h  TokenTypeFactory.cpp  TokenTypeFactory.h
test/: CMakeLists.txt  LexerTests.cpp  ParserTests.cpp
test/ast/: CMakeLists.txt  VariableTest.cpp
test/ast/expression/: CMakeLists.txt  LogicAndTest.cpp  LogicFactorTest.cpp  LogicRelationalTermTest.cpp  LogicTest.cpp  MathFactorTest.cpp  MathTermTest.cpp  MathTest.cpp
test/ast/statement/: CMakeLists.txt  IfStatement.cpp  PrintStatementTest.cpp  ReturnStatement.cpp  VariableAssignmentTest.cpp  WhileStatement.cpp
test/execution/: CMakeLists.txt  ExecutionTest.cpp
test/lexer/: CMakeLists.txt
test/parser/: CMakeLists.txt  ParserTests.cpp
